--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,5 +1,12 @@
+@font-face {
+  font-family:'myfont';
+  src: url('../fonts/element-icons.woff') format('woff');
+  font-weight:600;
+  font-style:nromal;
+}
 
 .hello {
   color:red;
   background:url('../img/icon.svg');
+  font-family:'myfont';
 }
